# ollama-manager

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ollama_manager/: LICENSE.md  app.py
ollama_manager/commands/: __init__.py  delete.py  list.py  pull.py  run.py
ollama_manager/ui/: image_chat.py  text_chat.py
ollama_manager/utils/: __init__.py
