[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ollama_manager", "ollama_manager.commands", "ollama_manager.utils", "ollama_manager.ui"]

[project]
name = "ollama_manager"
version = "0.1.7"
authors = [
    { name = "Yankee Maharjan" },
]
description = "Manage Ollama models from your commandline!"
keywords = ["ollama", "ollama cli", "ollama python", "ollama manager"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "beautifulsoup4==4.13.4",
    "click==8.2.0",
    "httpx==0.28.1",
    "ollama==0.5.1",
    "requests==2.32.4",
    "simple-term-menu==1.6.4",
    "textual==3.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.7.4"
]

ui =["streamlit==1.45.1"]


[project.urls]
Repository = "https://github.com/yankeexe/ollama-manager"

[project.scripts]
olm = "ollama_manager.app:cli"
